src/rules/isort/snapshots/ruff__isort__tests__fit_line_length_comment.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix:
    content: "import a\n\n# Don't take this comment into account when determining whether the next import can fit on one line.\nfrom b import c\nfrom d import (\n    e,  # Do take this comment into account when determining whether the next import can fit on one line.\n)\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 5
      column: 0
  parent: ~

