src/rules/isort/snapshots/ruff__isort__tests__force_sort_within_sections.py.snap
---
source: src/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 12
    column: 0
  fix:
    content: "import a  # import\nimport b as b1  # import_as\nimport c.d\nfrom a import a1  # import_from\nfrom c import *  # import_from_star\n\nfrom ...grandparent import fn3\nfrom ..parent import *\nfrom . import my\nfrom .my import fn\nfrom .my.nested import fn2\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 12
      column: 0
  parent: ~

