src/rules/isort/snapshots/ruff__isort__tests__leading_prefix.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 7
  end_location:
    row: 2
    column: 9
  fix: ~
  parent: ~
- kind:
    UnsortedImports: ~
  location:
    row: 5
    column: 11
  end_location:
    row: 6
    column: 13
  fix: ~
  parent: ~
- kind:
    UnsortedImports: ~
  location:
    row: 10
    column: 8
  end_location:
    row: 10
    column: 17
  fix: ~
  parent: ~
- kind:
    UnsortedImports: ~
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 9
  fix: ~
  parent: ~

